# webapp

./: .babelrc  .eslintrc.js  .gitignore  .prettierrc  .travis.yml  API_ERRORS_TO_HANDLE.txt  CODE_OF_CONDUCT.md  COMPONENTS.adoc  CONTRIBUTING.adoc  ORGANIZING_COMPONENTS.md  PRIORITIES.md  README.md  REQUIRED_API_TRANSACTIONS.txt  ROADMAP.md  TODO.md  generate  nuxt.config.js  package.json  stylelint.config.js  tsconfig.json
.github/: FUNDING.yml
TEMPLATES/: components.template.vue  pages.template.vue  stores.template.js
assets/: defaults.sass  reset.sass
components/: ArrayButton.vue  ArrayButtonFlat.vue  ArrayButtonReg.vue  ArrayCardNoteFile.vue  ArrayCardSubject.vue  ArrayCardTest.vue  ArrayGroupedHomework.bak.vue  ArrayGroupedHomework.vue  ArrayGroupedItemExercise.vue  ArrayItemExercise.vue  ArrayItemHomework.vue  ArrayItemScheduleMutation.vue  BadgeSubject.behavior  BadgeSubject.vue  BarFloating.vue  BaseButton.vue  BaseButtonReg.vue  BaseCard.vue  BaseFlatComponent.vue  BaseHeading.vue  BaseInput.vue  BaseModal.bak.vue  BaseModal.behavior  BaseModal.vue  BigNumber.vue  ButtonFlat.vue  ButtonFloating.vue  ButtonIcon.vue  ButtonLargeFlat.vue  ButtonLinkIcon.vue  ButtonNormal.behavior  ButtonNormal.vue  ButtonPrimary.vue  ButtonReg.vue  ButtonRegDangerPrimary.vue  ButtonRegPrimary.vue  ButtonRegSecondary.vue  ButtonSecondary.vue  CardAdd.vue  CardCourse.behavior  (+86 more)
layouts/: bare.vue  default.vue
middleware/: authed.js  notAuthed.js  setup.js
pages/: coming-soon.vue  (+7 more)
tests/e2e/: environment.py  homework.feature  pyproject.toml
tests/e2e/steps/: background.py
(+165 files in other folders)
